docs/dolfin/1.0.0/python/source/programmers-reference/cpp/index.rst
.. Index file for the dolfin.cpp module.

.. _programmers_reference_cpp_index:

dolfin.cpp module
*****************

Classes:

.. toctree::
    :maxdepth: 1

    ALE
    AdaptiveLinearVariationalSolver
    AdaptiveNonlinearVariationalSolver
    Assembler
    BarycenterQuadrature
    BasisFunction
    BlockMatrix
    BlockVector
    BoolParameter
    BoundaryCondition
    BoundaryMesh
    Box
    Cell
    CellFunction
    CellFunctionBool
    CellFunctionDouble
    CellFunctionInt
    CellFunctionUInt
    CellType
    CholmodCholeskySolver
    ConstDoubleArray
    Constant
    DefaultFactory
    DirichletBC
    DofMap
    DomainBoundary
    DoubleArray
    DoubleParameter
    DynamicMeshEditor
    Edge
    EdgeFunction
    EdgeFunctionBool
    EdgeFunctionDouble
    EdgeFunctionInt
    EdgeFunctionUInt
    EpetraFactory
    EpetraKrylovSolver
    EpetraLUSolver
    EpetraMatrix
    EpetraSparsityPattern
    EpetraVector
    Equation
    ErrorControl
    Event
    Expression
    Extrapolation
    Face
    FaceFunction
    FaceFunctionBool
    FaceFunctionDouble
    FaceFunctionInt
    FaceFunctionUInt
    Facet
    FacetArea
    FacetCell
    FacetFunction
    FacetFunctionBool
    FacetFunctionDouble
    FacetFunctionInt
    FacetFunctionUInt
    File
    FiniteElement
    Form
    Function
    FunctionPlotData
    FunctionSpace
    GaussQuadrature
    GaussianQuadrature
    GenericAdaptiveVariationalSolver
    GenericDofMap
    GenericFunction
    GenericLUSolver
    GenericLinearSolver
    GenericMatrix
    GenericSparsityPattern
    GenericTensor
    GenericVector
    GlobalParameters
    HierarchicalDirichletBC
    HierarchicalErrorControl
    HierarchicalForm
    HierarchicalFunction
    HierarchicalFunctionSpace
    HierarchicalLinearVariationalProblem
    HierarchicalMesh
    HierarchicalMeshFunctionBool
    HierarchicalMeshFunctionDouble
    HierarchicalMeshFunctionInt
    HierarchicalMeshFunctionUInt
    HierarchicalNonlinearVariationalProblem
    ITLKrylovSolver
    IndexSet
    IntArray
    IntParameter
    IntersectionOperator
    Interval
    KrylovSolver
    LUSolver
    Lagrange
    Legendre
    LinearAlgebraFactory
    LinearSolver
    LinearVariationalProblem
    LinearVariationalSolver
    LobattoQuadrature
    LocalAssembler
    LocalMeshData
    MPI
    MPICommunicator
    MTL4Factory
    MTL4Matrix
    MTL4Vector
    Matrix
    Mesh
    MeshColoring
    MeshConnectivity
    MeshCoordinates
    MeshData
    MeshDomains
    MeshEditor
    MeshEntity
    MeshFunction
    MeshFunctionBool
    MeshFunctionDouble
    MeshFunctionInt
    MeshFunctionUInt
    MeshGeometry
    MeshPartitioning
    MeshRenumbering
    MeshTopology
    MeshValueCollection
    MeshValueCollectionBool
    MeshValueCollectionDouble
    MeshValueCollectionInt
    MeshValueCollectionUInt
    NewtonSolver
    NonlinearProblem
    NonlinearVariationalProblem
    NonlinearVariationalSolver
    OpenMpAssembler
    PETScBaseMatrix
    PETScFactory
    PETScKrylovMatrix
    PETScKrylovSolver
    PETScLUSolver
    PETScMatrix
    PETScMatrixDeleter
    PETScObject
    PETScPreconditioner
    PETScUserPreconditioner
    PETScVector
    PETScVectorDeleter
    ParallelData
    ParameterValue
    Parameters
    PeriodicBC
    Point
    PointPrimitive
    PointSource
    PrimitiveIntersector
    Progress
    Quadrature
    RadauQuadrature
    Rectangle
    SLEPcEigenSolver
    STLFactory
    STLMatrix
    Scalar
    SingularSolver
    SparsityPattern
    SparsityPatternBuilder
    SpecialFacetFunction
    StringParameter
    SubDomain
    SubMesh
    SubSpace
    SubSystemsManager
    SubsetIterator
    SystemAssembler
    Table
    TableEntry
    TimeSeries
    Timer
    TrilinosPreconditioner
    UIntArray
    UmfpackLUSolver
    UnitCircle
    UnitCube
    UnitInterval
    UnitSphere
    UnitSquare
    UnitTetrahedron
    UnitTriangle
    Variable
    VariationalProblem
    Vector
    Vertex
    VertexFunction
    VertexFunctionBool
    VertexFunctionDouble
    VertexFunctionInt
    VertexFunctionUInt
    cells
    edges
    entities
    faces
    facets
    uBLASDenseFactory
    uBLASDenseMatrix
    uBLASILUPreconditioner
    uBLASKrylovMatrix
    uBLASKrylovSolver
    uBLASPreconditioner
    uBLASSparseFactory
    uBLASSparseMatrix
    uBLASVector
    vertices

Functions:

.. toctree::
    :maxdepth: 1

    ALE_move
    Assembler_assemble
    Assembler_assemble_cells
    Assembler_assemble_exterior_facets
    Assembler_assemble_interior_facets
    CellType_create
    CellType_string2type
    CellType_type2string
    CholmodCholeskySolver_default_parameters
    DefaultFactory_factory
    DirichletBC_default_parameters
    EpetraKrylovSolver_default_parameters
    EpetraKrylovSolver_methods
    EpetraKrylovSolver_preconditioners
    EpetraLUSolver_default_parameters
    EpetraLUSolver_methods
    ErrorControl_default_parameters
    Extrapolation_extrapolate
    File_create_parent_path
    File_exists
    GenericAdaptiveVariationalSolver_default_parameters
    GlobalParameters_default_parameters
    ITLKrylovSolver_default_parameters
    ITLKrylovSolver_methods
    ITLKrylovSolver_preconditioners
    KrylovSolver_default_parameters
    LUSolver_default_parameters
    Legendre_d2dx
    Legendre_ddx
    Legendre_eval
    LinearSolver_default_parameters
    LinearVariationalSolver_default_parameters
    LocalAssembler_assemble
    LocalAssembler_assemble_cell
    LocalAssembler_assemble_exterior_facet
    LocalAssembler_assemble_interior_facet
    MPI_barrier
    MPI_global_offset
    MPI_index_owner
    MPI_is_broadcaster
    MPI_is_receiver
    MPI_local_range
    MPI_num_processes
    MPI_process_number
    MeshColoring_color
    MeshColoring_color_cells
    MeshColoring_compute_colors
    MeshColoring_type_to_dim
    MeshPartitioning_build_distributed_mesh
    MeshPartitioning_number_entities
    NewtonSolver_default_parameters
    NonlinearVariationalSolver_default_parameters
    OpenMpAssembler_assemble
    PETScFactory_instance
    PETScKrylovSolver_default_parameters
    PETScKrylovSolver_methods
    PETScKrylovSolver_preconditioners
    PETScLUSolver_default_parameters
    PETScLUSolver_methods
    PETScPreconditioner_default_parameters
    PrimitiveIntersector_do_intersect
    PrimitiveIntersector_do_intersect_exact
    SLEPcEigenSolver_default_parameters
    STLFactory_instance
    SingularSolver_default_parameters
    SparsityPatternBuilder_build
    SubSystemsManager_finalize
    SubSystemsManager_init_mpi
    SubSystemsManager_init_petsc
    SystemAssembler_assemble
    TimeSeries_default_parameters
    TimeSeries_filename_data
    TimeSeries_filename_times
    TrilinosPreconditioner_default_parameters
    TrilinosPreconditioner_preconditioners
    UmfpackLUSolver_default_parameters
    adapt
    adapt_markers
    assemble
    assemble_system
    begin
    between
    debug
    dolfin_error
    dorfler_mark
    down_cast
    end
    error
    get_log_level
    get_tensor_type
    has_type
    info
    info_stream
    info_underline
    init
    ipow
    krylov_solver_methods
    krylov_solver_preconditioners
    linear_solver_methods
    list_krylov_solver_methods
    list_krylov_solver_preconditioners
    list_linear_solver_methods
    list_lu_solver_methods
    list_timings
    log
    lu_solver_methods
    mark
    near
    normalize
    not_working_in_parallel
    rand
    refine
    residual
    seed
    set_log_active
    set_log_level
    set_output_stream
    solve
    summary
    tic
    time
    timing
    toc
    uBLASDenseFactory_instance
    uBLASKrylovSolver_default_parameters
    uBLASKrylovSolver_methods
    uBLASKrylovSolver_preconditioners
    uBLASSparseFactory_instance
    warning

Module docstring:

.. automodule:: dolfin.cpp
   :no-members:
   :no-undoc-members:
   :no-show-inheritance: